fix: align Score value

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,18 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: flex-start;
+}
 #score {
     color: white;
     background-color: #333;
@@ -12,6 +23,7 @@
     margin: 0;
     padding: 10px;
     font-size: 5vmin;
+    text-align: left;
 }
 
 #game-area {
@@ -46,11 +58,22 @@ body {
     padding: var(--cell-gap);
     position: relative;
 }
+@property --num {
+    syntax: '<integer>';
+    initial-value: 0;
+    inherits: true;
+  }
+  div {
+    transition: --num 1s;
+    counter-reset: num var(--num);
+  }
+
 
 .cell {
     background-color: #aaa;
     border-radius: 1vmin;
 }
+
 
 .tile {
     /* --x:0;
